--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.6",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
+        "boostrap": "^2.0.0",
+        "bootstrap": "^5.3.2",
         "laravel-vite-plugin": "^0.8.0",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.31",
+        "sass": "^1.68.0",
+        "scss": "^0.2.4",
+        "tailwindcss": "^3.3.3",
+        "vite": "^4.4.9"
     }
 }
